--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-	    <title>LFG</title>
-    </head>
-    <body>
-        
-        <div class="container">
-            <div class="inner">
-                <div class="item">
-                    <img class="img" src="img/1.jpg" alt="Ошибка">
-                    <button class="btn" id="btn1">Выбрать</button>
-                </div>
-            </div>
-        </div>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Document</title>
+</head>
+<body>
 
-        <script src="https://telegram.org/js/telegram-web-app.js"></script>
-	    <script src="app.js"></script>
+	<div class="container">
+		<div class="inner">
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn1">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+			    <button class="btn" id="btn2">Add</button>
+		    </div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+			    <button class="btn" id="btn3">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn4">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn5">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn6">Add</button>
+			</div>
+		</div>
+	</div>
+	<div class="usercard" id="usercard"></div>
+	
 
-    </body>
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+	<script src="app.js"></script>
+</body>
 </html>
+
+<!-- <script src="https://telegram.org/js/telegram-web-app.js"></script> -->
