--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>LFG</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
   </head>
   <body>
     <div id="main">
@@ -13,5 +15,6 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacinia, lacus at semper ultrices</p>
         <button id="buy">Купить</button>
     </div>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
 </html>
