--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         let buy = document.getElementById("buy");
         let order = document.getElementById("order");
 
-        boy.addEventListener("click", () ==> {
+        boy.addEventListener("click", () => {
             document.getElementById("main").style.display = "none";
             document.getElementById("form").style.display = "block";
             document.getElementById("user_name").style.display = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
         });
 
-        order.addEventListener("click", () ==> {
+        order.addEventListener("click", () => {
             tg.close():
         });
     </script>
