--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <button id="order">Оформить</button>
     </form>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="app.js"></script>
+    <script>
+        let tg = window.Telegram.WebApp;
+        let buy = document.getElementById("buy");
+        let order = document.getElementById("order");
+            buy.addEventListener("click", function(){
+            document.getElementById("main").style.display = "none";
+            document.getElementById("form").style.display = "block";
+        });
+    </script>
   </body>
 </html>
