--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>LFG</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 
-  </head>
-  <body>
-    <div id="main">
-        <h1>Выбор персонажа</h1>
-        <img src="https://cdn-icons-png.flaticon.com/512/3595/3595455.png">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacinia, lacus at semper ultrices</p>
-        <button id="buy">Купить</button>
-    </div>
-    <form id="form">
-        <input type="text" placeholder="Имя" id="user_name">
-        <input type="text" placeholder="Email" id="user_email">
-        <input type="text" placeholder="Телефон" id="user_phone">
-        <button id="order">Оформить</button>
-    </form>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="app.js"></script>
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Страница</title>
+    </head>
+
+    <body>
+        <div class="container">
+	<div class ="title"></div>
+        <div class ="hero_name">LEM</div>
+	<div class ="hero_class">male<br>halfling<br>bard</div>
+        <div class ="title2"></div>
+	<div class ="hero_stats">навыки</div>  
+	<div class ="back"></div>	
+            <div class="item">
+
+            </div>  
+        </div>
+     </body>
 </html>
