--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-        <title>Страница</title>
-    </head>
+<body>
+    <div class="container">
+        <div class="back">
 
-    <body>
-        <div class="container">
-	<div class ="title"></div>
-        <div class ="hero_name">LEM</div>
-	<div class ="hero_class">male<br>halfling<br>bard</div>
-        <div class ="title2"></div>
-	<div class ="hero_stats">навыки</div>  
-	<div class ="back"></div>	
-            <div class="item">
 
-            </div>  
         </div>
-     </body>
+    </div>
+</body>
 </html>
