--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Выбор героя</title>
 </head>
 
 <body>
     <div class="container">
         <div class="back">
-
-
+            <div class="title">
+                <div class="hero_name"><b>LEM</b></div>
+                <div class="hero_class"><b>MALE<br>HALFLING<br>BARD</b></div>
+            </div>
         </div>
     </div>
 </body>
