--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <div class="container">
         <div class="back">
-            <div class="title">
+            <div class="title"></div>
                 <div class="hero_name"><b>LEM</b></div>
                 <div class="hero_class"><b>MALE<br>HALFLING<br>BARD</b></div>
-            </div>
+            <div class="title2"></div>
+                <div class="hero_skill"><b>НАВЫКИ</b></div>
         </div>
     </div>
 </body>
