--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 
 <body>
     <div class="container">
-        <div class="back">
-            <div class="title"></div>
-                <div class="hero_name"><b>LEM</b></div>
-                <div class="hero_class"><b>MALE<br>HALFLING<br>BARD</b></div>
-            <div class="title2"></div>
-                <div class="hero_skill"><b>НАВЫКИ</b></div>
+        <div class="grid">
+
         </div>
     </div>
 </body>
