--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <div class="container">
         <div class="grid">
-
+            <div class="oblast-1"></div>
+            <div class="oblast-2"></div>
+            <div class="oblast-3"></div>
+            <div class="oblast-4"></div>
         </div>
     </div>
 </body>
