--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="oblast-2"></div>
             <div class="oblast-3"></div>
             <div class="oblast-4"></div>
+            <div class="oblast-5"></div>
         </div>
     </div>
 </body>
