--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <div class="oblast-2"></div>
             <div class="oblast-3"></div>
             <div class="oblast-4"></div>
-            <div class="oblast-5"></div>
+            <div class="oblast-5">ВЫБРАТЬ</div>
+            <div class="oblast-6">ЛЕМ</div>
+            <div class="oblast-7">НАВЫКИ</div>
         </div>
     </div>
 </body>
