--- a/index.html
+++ b/index.html
@@ -16,6 +16,61 @@
             <div class="oblast-2"></div>
             <div class="oblast-3"></div>
             <div class="oblast-4"></div>
+            <div class="oblast-5">ЛЕМ</div>
+            <div class="oblast-5-text">МУЖЧИНА<br>ПОЛУРОСЛИК<br>БАРД</div>
+            <div class="oblast-6">НАВЫКИ</div>
+            <div class="oblast-7"></div>
+            <div class="oblast-7-text">СИЛА</div>
+            <div class="oblast-7-text-2">d4</div>
+            <div class="oblast-7-text-3">+1</div>
+            <div class="oblast-8"></div>
+            <div class="oblast-8-text">ЛОВКОСТЬ</div>
+            <div class="oblast-8-text-2">АКРОБАТИКА: ЛОВКОСТЬ +1</div>
+            <div class="oblast-8-text-3">d8</div>
+            <div class="oblast-8-text-4">+1</div>
+            <div class="oblast-8-text-5">+2</div>
+            <div class="oblast-8-text-6">+3</div>
+            <div class="oblast-8-2"></div>
+            <div class="oblast-8-3"></div>
+            <div class="oblast-9"></div>
+            <div class="oblast-9-text">ВЫНОСЛИВОСТЬ</div>
+            <div class="oblast-9-text-2">d8</div>
+            <div class="oblast-9-text-3">+1</div>
+            <div class="oblast-9-text-4">+2</div>
+            <div class="oblast-9-text-5">+3</div>
+            <div class="oblast-9-2"></div>
+            <div class="oblast-9-3"></div>
+            <div class="oblast-10"></div>
+            <div class="oblast-10-text">ИНТЕЛЛЕКТ</div>
+            <div class="oblast-10-text-2">ЗНАНИЕ: ИНТЕЛЛЕКТ +1</div>
+            <div class="oblast-10-text-3">d6</div>
+            <div class="oblast-10-text-4">+1</div>
+            <div class="oblast-10-text-5">+2</div>
+            <div class="oblast-10-2"></div>
+            <div class="oblast-11"></div>
+            <div class="oblast-11-text">МУДРОСТЬ</div>
+            <div class="oblast-11-text-2">d6</div>
+            <div class="oblast-11-text-3">+1</div>
+            <div class="oblast-11-text-4">+2</div>
+            <div class="oblast-11-2"></div>
+            <div class="oblast-12"></div>
+            <div class="oblast-12-text">ХАРИЗМА</div>
+            <div class="oblast-12-text-2">ДИПЛОМАТИЯ: ХАРИЗМА +3</div>
+            <div class="oblast-12-text-3">ЧАРЫ: ХАРИЗМА +1</div>
+            <div class="oblast-12-text-4">ВЕРА: ХАРИЗМА +1</div>
+            <div class="oblast-12-text-5">d10</div>
+            <div class="oblast-12-text-6">+1</div>
+            <div class="oblast-12-text-7">+2</div>
+            <div class="oblast-12-text-8">+3</div>
+            <div class="oblast-12-text-9">+4</div>
+            <div class="oblast-12-2"></div>
+            <div class="oblast-12-3"></div>
+            <div class="oblast-12-4"></div>
+            <div class="oblast-13"></div>
+            <div class="oblast-14"></div>
+            <div class="oblast-15"></div>
+            <div class="oblast-16"></div>
+            <div class="oblast-17"></div>
         </div>
     </div>
 </body>
